--- a/motion/templates/assets/bits/userpic.html
+++ b/motion/templates/assets/bits/userpic.html
@@ -1,5 +1,5 @@
 <div class="userpic">
     <a class="userpic-link source-user-avatar" href="{{ user.get_absolute_url }}">
-        <img src="{{ user.userpic }}" alt="{{ user.display_name }}" at:flyout-enabled="yes" at:flyout-userxid="{{ user.id }}" width="50" height="50" />
+        <img src="{{ user.userpic }}" alt="{{ user.display_name }}" at:flyout-enabled="yes" at:flyout-userxid="{{ user.url_id }}" width="50" height="50" />
     </a>
 </div>
