--- a/motion/templates/assets/bits/footer.html
+++ b/motion/templates/assets/bits/footer.html
@@ -24,11 +24,11 @@
                 {% spaceless %}
                 <a href="{{ entry.get_absolute_url }}">
                 {% if entry.published|is_relative %}
-                {% blocktrans with entry.published|pithy_timesince as timestamp %}
                     {{ timestamp }}
-                {% endblocktrans %}
                 {% else %}
-                    on {{ entry.published|pithy_timesince }}
+                {% blocktrans with entry.published|pithy_timesince as timestamp %}
+                    on {{ timestamp }}
+                {% endblocktrans %}
                 {% endif %}
                 </a>
                 {% endspaceless %}
