--- a/motion/templates/bits/delete_entry.html
+++ b/motion/templates/bits/delete_entry.html
@@ -1,4 +1,4 @@
-<form id="delete-{{ entry.id }}" method="post" action="">
-    <input type="hidden" name="asset-id" value="{{ entry.id }}" />
+<form id="delete-{{ entry.url_id }}" method="post" action="">
+    <input type="hidden" name="asset-id" value="{{ entry.url_id }}" />
     <button class="button-delete" type="submit" onclick="return confirm('{{ _("Are you sure you want to delete this post?")|escapejs }}');" name="delete" title="Delete Post">Delete</button>
 </form>
