Don't force #fff for bg for all inputs (affects file upload fields also).

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -37,7 +37,7 @@ h1 {
     font-weight: normal;
     clear: none;
 }
-textarea, input {
+textarea {
     font-family: inherit;
     background: #fff;
     padding: 2px;
