Moved edit field icon to shared images.

--- a/motion/templates/bits/profile.html
+++ b/motion/templates/bits/profile.html
@@ -11,7 +11,7 @@
             <strong>{{ field.label_tag }}</strong>:
             <span class="show">
                <span class="value">{% formfieldvalue field %}</span>
-               <img src="{{ settings.media_url }}themes/{{ settings.theme }}/images/edit-field.png" />
+               <img src="{{ settings.media_url }}images/icons/edit-field.png" />
             </span>
             <span class="edit">{{ field }}</span>
         </li>
