Added id to comment button and changed it to a button tag, similar to the compose form.

--- a/motion/templates/permalink.html
+++ b/motion/templates/permalink.html
@@ -56,7 +56,7 @@
             <form method="post" action="" name="comments_form" id="comments-form">
                 <div>{{ form.body }}</div>
                 <div>
-                    <input type="submit" name="comment" value="Submit" />
+                    <button id="comment-submit" name="comment" value="Submit">{% trans "Submit" %}</button>
                 </div>
             </form>
         </div>
