--- a/motion/templates/widgets/about_site.html
+++ b/motion/templates/widgets/about_site.html
@@ -2,6 +2,7 @@
 <div class="widget-about-site widget">
     <h3 class="design-highlight-color">About</h3>
     <div class="widget-content">
-        {% trans "You are using the Potion alpha, codename Orchid. Please report any bugs/unexpected behavior to chall@sixapart.com." %}
+        {% trans "You are using the Potion alpha, codename Orchid. Please report any bugs/unexpected behavior to chall@sixapart.com." %}<br />
+        <a href="{% url terms %}">{% trans "Terms of Service" %}</a> <span class="separator">&bull;</span> <a href="{% url privacy %}">{% trans "Privacy" %}</a>
     </div><!-- end .widget-content -->
 </div><!-- end .widget-about-site -->
