Changed layout to 'layout-wm', to reflect actual layout.

--- a/motion/templates/base.html
+++ b/motion/templates/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
 </head>
 
-<body id="motion" class="design-background {% block page_id %}{% endblock %} {% block page_layout %}layout-wtt{% endblock %} noscript">
+<body id="motion" class="design-background {% block page_id %}{% endblock %} {% block page_layout %}layout-wm{% endblock %} noscript">
     <div id="container">
         <div id="container-inner">
 
