--- a/motion/templates/assets/bits/delete.html
+++ b/motion/templates/assets/bits/delete.html
@@ -1,9 +1,20 @@
+{% load i18n %}
 {% if entry.can_delete %}
 {% if user.is_superuser or settings.allow_users_to_delete_posts %}
 <div class="controls">
     <form id="delete-{{ entry.url_id }}" method="post" action="">
         <input type="hidden" name="asset-id" value="{{ entry.url_id }}" />
-        <button class="button-delete" type="submit" onclick="return confirm('{{ _("Are you sure you want to delete this post?")|escapejs }}');" name="delete" title="Delete">Delete</button>
+        <button class="button-delete" type="submit"
+            onclick="return confirm(
+            {% blocktrans with entry.type_id as type %}
+                'Are you sure you want to delete this {{ type }}?'
+            {% endblocktrans %}
+            );" name="delete" title=
+            {% blocktrans with entry.type_id as type %}
+                "Delete {{ type }}"
+            {% endblocktrans %}
+            >{% trans "Delete" %}
+        </button>
     </form>
 </div>
 {% endif %}
