--- a/motion/templates/500.html
+++ b/motion/templates/500.html
@@ -6,7 +6,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="generator" content="spacegiraffe 1.0" />
-    <link rel="stylesheet" href="{{ settings.media_url }}themes/motion2/style.css" type="text/css" />
+    <link rel="stylesheet" href="{{ settings.media_url }}themes/motion/style.css" type="text/css" />
     <link rel="start" href="/" title="Home" />
     <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}favicon.ico" />
     <title>{{ title }}</title>
