--- a/motion/templates/bits/profile.html
+++ b/motion/templates/bits/profile.html
@@ -1,36 +1,49 @@
 {# Custom site profile data #}
 {% load formfieldvalue %}
 {% load withblock %}
+{% load i18n %}
 
-{% if profileform %}
-<form id="profile-data-form" method="post" action="{{ member.get_absolute_url }}">
-    <img src="{{ settings.media_url }}images/spinner.gif" class="spinner" />
-    <ul id="profile-data">
-        {% for field in profileform %}
-        <li>
-            <strong>{{ field.label_tag }}</strong>:
-            <span class="show">
-               <span class="value">{% formfieldvalue field %}</span>
-               <img src="{{ settings.media_url }}images/icons/edit-field.png" />
-            </span>
-            <span class="edit">{{ field }}</span>
-        </li>
-        {% endfor %}
-    </ul>
-</form>
-{% else %}
-   {% if profiledata %}
-   <ul id="profile-data">
-      {% for field in profiledata %}
-         {% withblock %}{% formfieldvalue field %}{% as fieldvalue %}
-            {% if fieldvalue %}
+<div class="actions">
+    <h2 class="design-highlight-color">
+    {% blocktrans with member.display_name as name %}
+        More About {{ name }}
+    {% endblocktrans %}
+    </h2>
+    
+    {% if profileform %}
+    <form id="profile-data-form" method="post" action="{{ member.get_absolute_url }}">
+        <img src="{{ settings.media_url }}images/spinner.gif" class="spinner" />
+        <ul id="profile-data">
+            {% for field in profileform %}
             <li>
-               <strong>{{ field.label }}</strong>:
-               <span class="value">{{ fieldvalue }}</span>
+                <strong>{{ field.label_tag }}</strong>:
+                <span class="show">
+                   <span class="value">{% formfieldvalue field %}</span>
+                   <img src="{{ settings.media_url }}images/icons/edit-field.png" />
+                </span>
+                <span class="edit">{{ field }}</span>
             </li>
-            {% endif %}
-         {% endwithblock %}
-      {% endfor %}
-   </ul>
-   {% endif %}
-{% endif %}
+            {% endfor %}
+        </ul>
+    </form>
+    {% else %}
+       {% if profiledata %}
+       <ul id="profile-data">
+          {% for field in profiledata %}
+             {% withblock %}{% formfieldvalue field %}{% as fieldvalue %}
+                {% if fieldvalue %}
+                <li>
+                   <strong>{{ field.label }}</strong>:
+                   <span class="value">{{ fieldvalue }}</span>
+                </li>
+                {% endif %}
+             {% endwithblock %}
+          {% endfor %}
+       </ul>
+       {% endif %}
+    {% endif %}
+    
+    {% if is_self %}
+        <p><img src="{{ settings.media_url }}images/icons/edit-field.png" />&nbsp;<a id="edit-profile-link" href="#">{% trans "Edit my profile" %}</a></p>
+    {% endif %}
+</div>
