--- a/motion/templates/widgets/followers.html
+++ b/motion/templates/widgets/followers.html
@@ -21,7 +21,9 @@ Template used for displaying a list of the users followers.
         <ul>
             {% for rel in followers %}
             {% with rel.target as member %}
+            {% with 32 as photo_size %}
             {% include "bits/list_member.html" %}
+            {% endwith %}
             {% endwith %}
             {% endfor %}
         </ul>
