--- a/motion/templates/base.html
+++ b/motion/templates/base.html
@@ -25,7 +25,7 @@
                     {% if settings.allow_posting %}
                     <div id="user-compose-friends" class="design-compose-background">
                         {% if user.is_authenticated %}
-                        <form class="submit-wrapper" method="GET" action="{% url home %}">
+                        <form class="submit-wrapper" method="GET" action="{% url group_events %}">
                             <button>{% trans "POST STUFF" %}</button>
                         </form>
                         {% endif %}
